feat: assignments controller
